# nx-mcp

./: .env.example  MCP_SERVER_DOCUMENTATION.txt  TODO_NXOPEN_ROADMAP.md  aaa.txt  arm.prt  base_plate_100x60x10.prt  circular_flange.prt  circular_flange_6_holes.prt  circular_flange_8_holes.prt  clevis_mount_bracket.prt  cube.prt  cube.stl  cylinder_r10_h50.prt  cylinder_r10_h50_chamfer5.prt  cylinder_r10_h50_chamfer5_bottom_blend2.prt  cylinder_r20_h50.prt  feature_builder_inspection.json  l_linkage_arm.prt  latest_nx_result.txt  linkage_arm.prt  linkage_bracket.prt  live_bridge_config.json  mechanical_bracket.prt  nx_result_watcher.ps1  offset_linkage_arm.prt  open_current_nx_result.cmd  open_latest_nx_result.vbs  parametric_shaft_with_keyway.prt  plate_100x60x10_4x_d8_holes.prt  pyproject.toml  spur_gear_28T_m3.prt  start_nx_result_watcher.cmd  threaded_trunnion.prt  three_arm_bracket.prt  two_cuboids.prt
.claude/: settings.local.json
live_validation/: feature_builder_inspection.json  feature_builder_probe.json  feature_validation_results.json  validate_add_chamfer.prt  validate_add_fillet.prt  validate_create_cylinder.prt
scratch/: automotive_pulley_hub.py  debug_three_arm.py  flange_120_50_15_6x10_bcd95.py  inspect_dim_geom.py  inspect_modl_motion.py  inspect_move_object.py  inspect_rapid_dimension.py  inspect_sketch.py  inspect_sketch_instance.py  open_flange.py  open_hub.py  open_l_bracket.py  open_pulley_hub.py  run_arm_assembly.py  run_debug_three_arm.py  run_inspect_dim_geom.py  run_inspect_modl_motion.py  run_inspect_move_object.py  run_inspect_sketch.py  (+12 more)
(+74 files in other folders)
