[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nx-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
nx-mcp = "nx_mcp.server:main"
nx-mcp-http = "nx_mcp.http_server:main"

[tool.setuptools.packages.find]
where = ["src"]